Only needs a new desine for LCDs with less width than 360px

--- a/stopwatch.html
+++ b/stopwatch.html
@@ -6,9 +6,17 @@
     </head>
     <body>
         <div class="main">
-            <p class="ptimer"><samp class="hour">00</samp>:<samp class="min">00</samp>:<samp class="sec">00</samp>.<samp class="milisec">00</samp></p>
+            <div class="dupper-button">
+                <button class="bupper-button">
+                    <!-- <img class="expand-img" src="icons/expand.png"> -->
+                </button>
+                <button class="bupper-button">
+                    <!-- <img class="imode" src="icons/night.png"> -->
+                </button>
+            </div>
+            <p class="ptimer"><span class="hour">00</span><span class="hour-colon">:</span><span class="min">00</span>:<span class="sec">00</span>.<span class="milisec">00</span></p>
             <div class="dundertext">
-                <p class="pundertext">hr</p>
+                <p class="pundertext under-hour">hr</p>
                 <p class="pundertext">min</p>
                 <p class="pundertext">sec</p>
             </div>
@@ -24,11 +32,11 @@
                 </button>
             </div>
             <div class="dflaglist-toppic">
-                <p>Laps</p>
+                <!-- <p>Laps</p>
                 <p>Time</p>
                 <p>Total</p>
+                <hr class="hr"> -->
             </div>
-            <hr class="hr">
         </div>
         <div class="flag">
 
