Just some problems in FlagList style and Removing Mark button when Expanded, 3.0.0

--- a/stopwatch.html
+++ b/stopwatch.html
@@ -7,11 +7,11 @@
     <body>
         <div class="main">
             <div class="dupper-button">
-                <button class="bupper-button">
-                    <!-- <img class="expand-img" src="icons/expand.png"> -->
+                <button class="bupper-button bexpand" title="Expand">
+                    <img class="expand-img" src="icons/2.png">
                 </button>
-                <button class="bupper-button">
-                    <!-- <img class="imode" src="icons/night.png"> -->
+                <button class="bupper-button bmode" title="Day Mode">
+                    <img class="imode" src="icons/iconfider-daymode-white.png">
                 </button>
             </div>
             <p class="ptimer"><span class="hour">00</span><span class="hour-colon">:</span><span class="min">00</span>:<span class="sec">00</span>.<span class="milisec">00</span></p>
@@ -25,10 +25,10 @@
                     <img class="play" src="icons/play.png">
                 </button>
                 <button class="bsecond">
-                    <img class="photo" src="icons/Screenshot 2024-04-23 162320.png">
+                    <img class="photo" src="icons/flag-white.png">
                 </button>
                 <button class="bthird" title="Reset">
-                    <img class="reset" src="icons/Screenshot 2024-04-23 175502.png">
+                    <img class="reset" src="icons/reset-white.png">
                 </button>
             </div>
             <div class="dflaglist-toppic">
