JavaScript part splitted to Backend and Frontend, Expand and Night Mode are working correctly, Just the desine for mobile phone is not available, 4.0.0

--- a/stopwatch-under360px.html
+++ b/stopwatch-under360px.html
@@ -12,15 +12,19 @@
                 <button class="bsecond">Reset</button>
                 <button class="bfirst">Start</button>
             </div>
-            <div class="dflaglist-toppic">
-                <p>Lap</p>
-                <p>Lap times</p>
-                <p>Overall time</p>
+            <div class="header">
+                <div class="dflaglist-toppic">
+                    <p>Lap</p>
+                    <p>Lap times</p>
+                    <p>Overall time</p>
+                </div>
+                <hr class="hr">
             </div>
-            <hr class="hr">
         </div>
         <div class="flag">
-
+            <p class="l">05</p>
+            <p class="lt">00:04.17</p>
+            <p class="ot">00:06.27</p>
         </div>
         <script src="stopwatch-under360px.js"></script>
     </body>
