--- a/stopwatch.html
+++ b/stopwatch.html
@@ -14,7 +14,7 @@
                     <img class="imode" src="icons/iconfider-daymode-white.png">
                 </button>
             </div>
-            <p class="ptimer"><span class="hour">00</span><span class="hour-colon">:</span><span class="min">00</span>:<span class="sec">00</span>.<span class="milisec">00</span></p>
+            <p class="ptimer"><span class="hour">00</span>:<span class="min">00</span>:<span class="sec">00</span>.<span class="milisec">00</span></p>
             <div class="dundertext">
                 <p class="pundertext under-hour">hr</p>
                 <p class="pundertext">min</p>
@@ -41,6 +41,6 @@
         <div class="flag">
 
         </div>
-        <script src="stopwatch.js"></script>
+        <script src="stopwatch.js" type="module"></script>
     </body>
 </html>
