Loaded as a wabsite, under 360px desine has not done yet, 4.1.1

--- a/init.html
+++ b/init.html
@@ -22,7 +22,7 @@
             </div>
             <div class="dbuttons">
                 <button class="bfirst" title="Start">
-                    <img class="play" src="icons/play.png">
+                    <img class="play" src="icons/play-black.png">
                 </button>
                 <button class="bsecond">
                     <img class="photo" src="icons/flag-white.png">
