--- a/stopwatch-under360px.html
+++ b/stopwatch-under360px.html
@@ -12,6 +12,7 @@
                 <button class="bsecond">Reset</button>
                 <button class="bfirst">Start</button>
             </div>
+            <p class="perror"></p>
             <div class="header">
                 <div class="dflaglist-toppic">
                     <p>Lap</p>
@@ -26,6 +27,6 @@
             <p class="lt">00:04.17</p>
             <p class="ot">00:06.27</p>
         </div>
-        <script src="stopwatch-under360px.js"></script>
+        <script src="stopwatch-under360px.js" type="module"></script>
     </body>
 </html>
