--- a/index.html
+++ b/index.html
@@ -1,46 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Stop Watch</title>
-        <link rel="stylesheet" href="stopwatch.css">
+        <title>StopWatch</title>
     </head>
     <body>
-        <div class="main">
-            <div class="dupper-button">
-                <button class="bupper-button bexpand" title="Expand">
-                    <img class="expand-img" src="icons/2.png">
-                </button>
-                <button class="bupper-button bmode" title="Day Mode">
-                    <img class="imode" src="icons/iconfider-daymode-white.png">
-                </button>
-            </div>
-            <p class="ptimer"><span class="hour">00</span>:<span class="min">00</span>:<span class="sec">00</span>.<span class="milisec">00</span></p>
-            <div class="dundertext">
-                <p class="pundertext under-hour">hr</p>
-                <p class="pundertext">min</p>
-                <p class="pundertext">sec</p>
-            </div>
-            <div class="dbuttons">
-                <button class="bfirst" title="Start">
-                    <img class="play" src="icons/play-black.png">
-                </button>
-                <button class="bsecond">
-                    <img class="photo" src="icons/flag-white.png">
-                </button>
-                <button class="bthird" title="Reset">
-                    <img class="reset" src="icons/reset-white.png">
-                </button>
-            </div>
-            <div class="dflaglist-toppic">
-                <!-- <p>Laps</p>
-                <p>Time</p>
-                <p>Total</p>
-                <hr class="hr"> -->
-            </div>
-        </div>
-        <div class="flag">
-
-        </div>
-        <script src="stopwatch.js" type="module"></script>
+        <button class="open">Open</button>
+        <button class="resize">resize</button>
+        <script src="index.js"></script>
     </body>
 </html>
