Startup and Settings added, 5.0.0

--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html>
     <head>
         <title>StopWatch</title>
+        <link rel="stylesheet" href="index.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <button class="open">Open</button>
-        <button class="resize">resize</button>
+        <img class="background-img" src="icons/startup-img.jpg">
+        <p class="fp">Welcome to our <span class="span">StopWatch</span></p>
+        <div class="sd">
+            <p class="sp">H &nbsp;O &nbsp;U &nbsp;R &nbsp;S</p>
+            <p class="sp">M &nbsp;I &nbsp;N &nbsp;U &nbsp;T &nbsp;E &nbsp;S</p>
+            <p class="sp">S &nbsp;E &nbsp;C &nbsp;O &nbsp;N &nbsp;D &nbsp;S</p>
+        </div>
+        <div class="td">
+            <p class="tp hour"></p>
+            <p class="tp minute"></p>
+            <p class="tp second"></p>
+        </div>
+        <p class="pointer">click here to open our StopWatch</p>
+        <button>Welcome</button>
         <script src="index.js"></script>
     </body>
 </html>
