The buttons of about us and settings added, 5.1.0

--- a/stopwatch.html
+++ b/stopwatch.html
@@ -6,6 +6,16 @@
     </head>
     <body>
         <div class="main">
+            <div class="upper-menu">
+                <button class="bsettings bupper-menu">
+                    <img class="isettings" src="icons/settings-white.png">
+                    <p class="psettings pupper-menu">Settings</p>
+                </button>
+                <button class="babout bupper-menu">
+                    <img class="iabout" src="icons/about-white.png">
+                    <p class="pabout pupper-menu">About us</p>
+                </button>
+            </div>
             <div class="dupper-button">
                 <button class="bupper-button bexpand" title="Expand">
                     <img class="expand-img" src="icons/2.png">
