--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
         </div>
         <p class="pointer">click here to open our StopWatch</p>
         <button>Welcome</button>
-        <script src="index.js"></script>
+        <script src="index.js" type="module"></script>
     </body>
 </html>
