--- a/test.html
+++ b/test.html
@@ -7,6 +7,7 @@
     <body>
         <button class="open">Open</button>
         <button class="resize">resize</button>
+        <img class="i" src="stopwatch-page-coefficient.png">
         <script src="test.js"></script>
     </body>
 </html>
